update: add core module

--- a/toolkit/template/scaffold/project/cpp/qt5/example/qml/CMakeLists.txt
+++ b/toolkit/template/scaffold/project/cpp/qt5/example/qml/CMakeLists.txt
@@ -75,9 +75,11 @@ find_package(
 qt5_add_big_resources(QML_FILES qml.qrc)
 
 add_executable(
-    {{ project_slug.snake_case }}
-    main.cpp
-    ${QML_FILES}
+        {{ project_slug.snake_case }}
+        main.cpp
+        core.cpp
+        core.h
+        ${QML_FILES}
 )
 
 target_link_libraries(
