--- a/toolkit/template/scaffold/project/ansible/playbook.yaml
+++ b/toolkit/template/scaffold/project/ansible/playbook.yaml
@@ -1,7 +1,7 @@
 - hosts: app
 
   vars_files:
-    - vars/main.yml
+    - vars/main.yaml
 
   roles:
     - screen
@@ -24,7 +24,7 @@
     # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/pip_module.html
     - name: Copy the app with permissions to server
       ansible.builtin.copy:
-        src: "app/{{ executable_file }}'"
+        src: "app/{{ executable_file }}"
         dest: "{{ install_location }}"
         mode: u=rwx,g=r,o=r
 
