--- a/toolkit/template/scaffold/project/cpp/qt5/qml/CMakeLists.txt
+++ b/toolkit/template/scaffold/project/cpp/qt5/qml/CMakeLists.txt
@@ -2,22 +2,15 @@ cmake_minimum_required(VERSION 3.18)
 
 project({{ project_slug.snake_case }})
 
-set(CMAKE_CXX_STANDARD {{ cpp_standard }})
+set(CMAKE_CXX_STANDARD 17)
 
-# Base information
 message(STATUS "CMAKE_VERSION: " ${CMAKE_VERSION})
-message(STATUS "PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR})
 message(STATUS "CMAKE_SOURCE_DIR: " ${CMAKE_SOURCE_DIR})
-
-# System information
 message(STATUS "CMAKE_HOST_SYSTEM_NAME: " ${CMAKE_HOST_SYSTEM_NAME})
-message(STATUS "CMAKE_HOST_SYSTEM_PROCESSOR: " ${CMAKE_HOST_SYSTEM_PROCESSOR})
 message(STATUS "CMAKE_HOST_SYSTEM_VERSION: " ${CMAKE_HOST_SYSTEM_VERSION})
+message(STATUS "CMAKE_HOST_SYSTEM_PROCESSOR: " ${CMAKE_HOST_SYSTEM_PROCESSOR})
 
-{%- if enable_src_module %}
-# Submodule build
 include(src/CMakeLists.txt)
-{%- endif %}
 
 # Settings for Qt5
 set(CMAKE_AUTOMOC ON)
@@ -26,7 +19,6 @@ set(CMAKE_AUTOUIC ON)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-# Build flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2")
 
@@ -37,7 +29,6 @@ if (WIN32)
 endif ()
 {%- endif %}
 
-# System processor
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "x86_64")
     message(STATUS "LINUX_OS_X86_64")
     set(LINUX_OS_X86_64 TRUE)
@@ -48,11 +39,8 @@ elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "AARCH64")
     add_definitions(-DLINUX_OS_ARM64)
 endif ()
 
-{%- if enable_3rd_module %}
-# Build settings
 include_directories(${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
-{%- endif %}
 
 # Qt default installation directory
 set(QT_VERSION {{ qt_version }})
@@ -92,30 +80,32 @@ find_package(
         Widgets
         Qml
         Quick
-        {%- if enable_concurrent %}
+        QuickControls2
         Concurrent
-        {%- endif %}
-        {%- if enable_multimedia %}
         Multimedia
-        {%- endif %}
-        {%- if enable_network %}
         Network
-        {%- endif %}
-        {%- if enable_websocket %}
         WebSockets
-        {%- endif %}
         REQUIRED
 )
 
+{%- if not x64_arch %}
 qt5_add_big_resources(QML_FILES qml.qrc)
+{% else %}
+set(QML_FILES qml.qrc)
+{%- endif %}
+
+FILE(
+        GLOB_RECURSE
+        SRC_LIST
+        src/*.h
+        src/*.cpp
+)
 
 add_executable(
-    {{ project_slug.snake_case }}
-    main.cpp
+    sod
+    ${SRC_LIST}
     ${QML_FILES}
-    {%- if enable_logo %}
     logo.rc
-    {%- endif %}
 )
 
 target_link_libraries(
@@ -125,25 +115,16 @@ target_link_libraries(
         Qt5::Widgets
         Qt5::Qml
         Qt5::Quick
-        {%- if enable_concurrent %}
+        Qt5::QuickControls2
         Qt5::Concurrent
-        {%- endif %}
-        {%- if enable_multimedia %}
         Qt5::Multimedia
-        {%- endif %}
-        {%- if enable_network %}
         Qt5::Network
-        {%- endif %}
-        {%- if enable_websocket %}
         Qt5::WebSockets
-        {%- endif %}
 )
 
-{%- if enable_3rd_module %}
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_SOURCE_DIR}/lib $<TARGET_FILE_DIR:${PROJECT_NAME}>)
-{%- endif %}
 
 if (WIN32)
     set_target_properties(
