--- a/toolkit/template/scaffold/project/cpp/qt5/qml/Makefile
+++ b/toolkit/template/scaffold/project/cpp/qt5/qml/Makefile
@@ -15,12 +15,12 @@ endif
 
 CMAKE_PREFIX_PATH = ${QT_PATH}/${QT_VERSION}/${QT_COMPILE_VERSION}
 
-WINDEPLOYQT = $$Env:PATH="${CMAKE_PREFIX_PATH}/bin;\
-						${QT_PATH}/Qt${QT_VERSION}/Tools/${QT_TOOL_VERSION}/bin;"+$$Env:Path; \
-						$$Env:QML2_IMPORT_PATH="${CMAKE_PREFIX_PATH}/qml"; \
-						$$Env:QT_DEBUG_PLUGINS=1; \
-						cd ${DIST_DIR}; \
-						windeployqt --release --qmldir "${CMAKE_PREFIX_PATH}/qml" ${EXECUTABLE}
+WIN_DEPLOY_QT = $$Env:PATH="${CMAKE_PREFIX_PATH}/bin;\
+							${QT_PATH}/Tools/${QT_TOOL_VERSION}/bin;"+$$Env:Path; \
+							$$Env:QML2_IMPORT_PATH="${CMAKE_PREFIX_PATH}/qml"; \
+							$$Env:QT_DEBUG_PLUGINS=1; \
+							cd ${DIST_DIR}; \
+							windeployqt --release --qmldir "${CMAKE_PREFIX_PATH}/qml" ${EXECUTABLE}
 
 BIN_DIR = bin
 
@@ -28,7 +28,7 @@ DIST_DIR = dist
 
 BUILD_DIR = cmake-build-release-${QT_TOOL_VERSION}
 
-dist: dist-copy dist-deployqt dist-setup
+dist: dist-copy dist-deploy-qt dist-installer
 
 dist-clean:
 	-rm -r ${DIST_DIR}
@@ -40,10 +40,10 @@ dist-copy: dist-clean
 	cp ${BUILD_DIR}/${EXECUTABLE} ${DIST_DIR}/${EXECUTABLE}
 	cp -r lib/*.dll ${DIST_DIR}
 
-dist-deployqt:
-	pwsh -Command '${WINDEPLOYQT}'
+dist-deploy-qt:
+	pwsh -Command '${WIN_DEPLOY_QT}'
 	mv ${DIST_DIR}/${EXECUTABLE} ${BIN_DIR}/${EXECUTABLE}
 
-dist-setup:
+dist-installer:
 	enigmavbconsole installer/enigma_setup.evb
 	iscc installer/inno_setup.iss
