--- a/toolkit/template/scaffold/project/python/prefect/.drone.yml
+++ b/toolkit/template/scaffold/project/python/prefect/.drone.yml
@@ -1,42 +1,34 @@
 kind: pipeline
-type: docker
-name: test
-
-volumes:
-  - name: cache
-    host:
-      path: /tmp/cache
-
-steps:
-  - name: pytest
-    image: python:3.10
-    volumes:
-      - name: cache
-        path: /root/.cache
-    commands:
-      - pip -V
-      - pip install -i https://pypi.douban.com/simple -r requirements.txt
-      - pip install -i https://pypi.douban.com/simple -r requirements-dev.txt
-      - pytest tests
-      - pip install .
-
----
-kind: pipeline
 type: exec
 name: deploy
-
-depends_on:
-  - test
 
 steps:
   - name: install
     environment:
-      PATH: /opt/anaconda3/envs/prefect-collections/bin:/usr/bin
+      PATH: /opt/anaconda3/envs/prefecthq/bin:/usr/bin
     commands:
-      - cp -r .prefect ~
       - pip -V
-      - pip install -i https://pypi.douban.com/simple -r requirements.txt
-      - pip install -i https://pypi.douban.com/simple -r requirements-dev.txt
-      - pytest tests
-      - pip install .
-      - {{ project_slug.snake_case }} register
+      - if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+      - cp -r .prefect ~
+      - python main.py deploy
+
+---
+kind: pipeline
+type: docker
+name: notification
+
+trigger:
+    status:
+      - success
+      - failure
+
+depends_on:
+  - deploy
+
+steps:
+    - name: notify
+      image: appleboy/drone-telegram
+      settings:
+        token: xxx
+        to: xxx
