update: requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-binaryornot~=0.4.4
-chardet~=4.0.0
-click~=8.0.4
-click-aliases~=1.0.1
-cookiecutter~=2.1.1
-jinja2~=3.1.2
-lxml~=4.9.0
-pillow~=9.0.1
-pydantic[dotenv]~=1.9.0
-pyperclip~=1.8.2
-pyyaml~=6.0
-requests~=2.27.1
+binaryornot>=0.4.4
+chardet>=4.0.0
+click>=8.0.4
+click-aliases>=1.0.1
+cookiecutter>=2.1.1
+jinja2>=3.1.2
+lxml>=4.9.0
+pillow>=9.2.0
+pydantic[dotenv]>=1.10.0
+pyperclip>=1.8.2
+pyyaml>=6.0
+requests>=2.27.1
