--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 log_cli=true
-log_level=DEBUG
+log_level=INFO
 testpaths = tests/
 addopts = -p no:warnings --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
